<resources>
    <string name="app_name">4096 - 5x5</string>
    <string name="_2048">4096</string>
    <string name="best_text">Best</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="_0">0</string>
    <string name="option">Option</string>
    <string name="score">Score</string>
    <string name="join_the_numbers_and_get_to_the_2048_tile">Join the numbers and get to the 4096 tile!</string>
    <string name="restart">Restart</string>
    <string name="undo">UNDO</string>
    <string name="mob_ad">ca-app-pub-7189942869251979/3506846461</string>
    <string name="title_activity_ad">AdActivity</string>

    <string name="action_settings">Settings</string>

    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-7189942869251979/3506846461</string>
</resources>
