<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingTop="35dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingBottom="15dp"
    android:orientation="vertical"
    android:background="@mipmap/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_2048"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@color/blue" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:orientation="vertical"
            android:layout_weight="0.8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:textColor="@color/textColor"
                android:background="@color/blue"/>

            <TextView
                android:id="@+id/scoreTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:textColor="@color/white"
                android:background="@color/blue"/>

            <Button
                android:id="@+id/restartBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restart"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:paddingTop="4dp"
                android:paddingBottom="7dp"
                android:textColor="@color/white"
                android:background="@color/blue"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:orientation="vertical"
            android:layout_weight="0.8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/best_text"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:textColor="@color/textColor"
                android:background="@color/blue"/>

            <TextView
                android:id="@+id/bestScoreTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:textColor="@color/white"
                android:background="@color/blue"/>

            <Button
                android:id="@+id/undoBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/undo"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:paddingTop="4dp"
                android:paddingBottom="7dp"
                android:textColor="@color/white"
                android:background="@color/blue"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_the_numbers_and_get_to_the_2048_tile"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textColor="@color/blue"/>

    <LinearLayout
        android:id="@+id/gameBoardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical"
        android:paddingStart="3dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingEnd="3dp">

    </LinearLayout>

</LinearLayout>